test/15-Typing/Signatures/Bad/ConstraintKind/Test.ds


fun 	:: a -(!e1)> a
	:- !e1 = ${%r1}
	
fun x = x